Refactor occurrence task management system
This changes overhauls the recurring task management to fix issues with
duplicate occurrences, improve editing behavior, and add cleanup utilities.

Key changes:
- Rebuild occurrence tasks from database when editing
- Fix occurrence count tracking in future edits
- Add debug & cleanup tools for occurrence tasks
- Fix avatar display for assigned users
- Improve consistency of

--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -2204,8 +2204,9 @@ document.addEventListener("DOMContentLoaded", async () => {
 
         if (editTask.users) {
             selectedUsers = [...editTask.users].map(u => u.trim()).filter(u => u);
+            // First populate users to render avatars, then update display
+            await populateUsers();
             updateSelectedUsersDisplay();
-            populateUsers();
         }
 
         // COMMENTED OUT - ALARMS
