--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1294,7 +1294,7 @@ h3 {
 
 
 
-/* As Needed Task Styles */
+/* Occasional Task Styles */
 .as-needed-task {
     background: #FFFFFF;
     border: 2px solid #FFC107;
@@ -1330,7 +1330,7 @@ h3 {
     margin-top: 12px;
 }
 
-/* Activate/Deactivate buttons for As Needed tasks */
+/* Activate/Deactivate buttons for Occasional tasks */
 .activate-btn {
     background: #FF9800;
     color: white;
@@ -1491,6 +1491,8 @@ h3 {
 }
 
 
+
+
   </style>
 
 
@@ -1579,7 +1581,7 @@ h3 {
             <div style="display: flex; justify-content: space-between; align-items: center;">
               <div class="card-left">
                 <span class="card-icon">⚡</span>
-                <span class="card-title">As Needed Tasks</span>
+                <span class="card-title">Occasional Tasks</span>
               </div>
               <div class="card-right">
                 <span class="card-count" id="asNeededCount">(0)</span>
@@ -2656,6 +2658,12 @@ async function handleRevert(title, date, index, user, event) {
 
 async function loadTasks() {
   try {
+    const container = document.getElementById("taskContainer");
+    // Skip if this is the admin page (no taskContainer)
+    if (!container) {
+      return;
+    }
+
     const res = await fetch(`https://beemazing1.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
       cache: "no-store"
     });
@@ -2665,7 +2673,6 @@ async function loadTasks() {
     // Filter tasks using filterTasksForDate from taskrotations.js
     const filteredTasks = filterTasksForDate(tasks, selectedDate);
 
-    const container = document.getElementById("taskContainer");
     container.innerHTML = ""; // Clear UI
 
     if (filteredTasks.length === 0) {
@@ -3343,7 +3350,7 @@ rewardCard.addEventListener("click", (event) => {
 
 
 
-// As Needed Tasks functionality
+// Occasional Tasks functionality
 async function loadAsNeededTasks() {
   const asNeededContainer = document.getElementById("asNeededTasks");
   const asNeededCount = document.getElementById("asNeededCount");
@@ -3360,15 +3367,15 @@ async function loadAsNeededTasks() {
 
     const allTasks = data.tasks || [];
     
-    // Filter for As Needed tasks
+    // Filter for Occasional tasks
     const asNeededTasks = allTasks.filter(task => {
-      return task && task.repeat === "As Needed" && task.asNeeded === true;
+      return task && task.repeat === "Occasional" && task.asNeeded === true;
     });
 
     asNeededCount.textContent = `(${asNeededTasks.length})`;
 
     if (asNeededTasks.length === 0) {
-      asNeededContainer.innerHTML = "<p>No as needed tasks found.</p>";
+      asNeededContainer.innerHTML = "<p>No occasional tasks found.</p>";
       return;
     }
 
@@ -3386,22 +3393,34 @@ async function loadAsNeededTasks() {
         transition: all 0.2s ease;
       `;
 
-      const activateBtn = document.createElement("button");
-      activateBtn.textContent = task.activated ? "Deactivate" : "Activate";
-      activateBtn.style.cssText = `
-        background: ${task.activated ? '#d32f2f' : 'var(--primary-color)'};
-        color: white;
-        border: none;
-        padding: 6px 12px;
-        border-radius: 4px;
+      const assignBtn = document.createElement("button");
+      assignBtn.textContent = "Assign";
+      assignBtn.style.cssText = `
+        background: var(--primary-color);
+        color: var(--secondary-color);
+        border: 2px solid var(--secondary-color);
+        padding: 8px 16px;
+        border-radius: 8px;
         cursor: pointer;
-        font-size: 12px;
+        font-size: 14px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
         margin-left: 10px;
+        transition: background-color 0.3s ease;
       `;
 
-      activateBtn.addEventListener('click', async (e) => {
+      assignBtn.addEventListener('click', async (e) => {
         e.stopPropagation();
-        await toggleAsNeededTask(task.title, !task.activated);
+        navigateToAssignmentPage(task);
+      });
+
+      assignBtn.addEventListener('mouseenter', () => {
+        assignBtn.style.background = '#FFB300';
+      });
+
+      assignBtn.addEventListener('mouseleave', () => {
+        assignBtn.style.background = 'var(--primary-color)';
       });
 
       taskElement.innerHTML = `
@@ -3412,13 +3431,13 @@ async function loadAsNeededTasks() {
               ${task.settings || 'Individual'} • ${task.users ? task.users.join(', ') : 'No users'}
             </div>
             <div style="font-size: 11px; color: #888;">
-              Status: ${task.activated ? 'Active' : 'Inactive'}
+              Buzz Points: ${task.buzzPoints || 10} • Frequency: Occasional
             </div>
           </div>
         </div>
       `;
 
-      taskElement.appendChild(activateBtn);
+      taskElement.appendChild(assignBtn);
       asNeededContainer.appendChild(taskElement);
 
       taskElement.addEventListener('click', () => {
@@ -3427,47 +3446,13 @@ async function loadAsNeededTasks() {
     });
 
   } catch (error) {
-    console.error("Error loading as needed tasks:", error);
+    console.error("Error loading occasional tasks:", error);
     asNeededContainer.innerHTML = `<p style="color: red;">Error: ${error.message}</p>`;
     asNeededCount.textContent = "(!)";
   }
 }
 
-async function toggleAsNeededTask(title, activate) {
-  try {
-    const response = await fetch("https://beemazing1.onrender.com/api/toggle-as-needed-task", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ 
-        adminEmail: adminEmail, 
-        title: title, 
-        activated: activate 
-      })
-    });
 
-    const data = await response.json();
-    if (!response.ok) throw new Error(data.error || "Failed to toggle task");
-
-    // Show success popup
-    const popup = document.createElement("div");
-    popup.className = "reward-popup";
-    popup.textContent = `Task ${activate ? 'activated' : 'deactivated'} successfully!`;
-    document.body.appendChild(popup);
-    setTimeout(() => {
-      popup.remove();
-      loadAsNeededTasks(); // Refresh the list
-    }, 2000);
-
-  } catch (error) {
-    console.error("Error toggling as needed task:", error);
-    const popup = document.createElement("div");
-    popup.className = "reward-popup";
-    popup.style.color = "red";
-    popup.textContent = `Error: ${error.message}`;
-    document.body.appendChild(popup);
-    setTimeout(() => popup.remove(), 3000);
-  }
-}
 
 function editAsNeededTask(task) {
   const basePath = window.location.pathname.includes('/mobile/') ? '/BeeMazing-A1/mobile' : '/BeeMazing-A1/mobile';
@@ -3475,18 +3460,25 @@ function editAsNeededTask(task) {
   window.location.href = editUrl;
 }
 
-// Add click handler for As Needed card
+// Navigate to assignment page
+function navigateToAssignmentPage(task) {
+  const assignmentUrl = `/BeeMazing-A1/mobile/2-UserProfiles/assignTask.html?admin=${encodeURIComponent(adminEmail)}&task=${encodeURIComponent(task.title)}&user=${encodeURIComponent(userName)}`;
+  window.location.href = assignmentUrl;
+}
+
+// Add click handler for Occasional card
 document.getElementById("asNeededCard").addEventListener("click", (event) => {
   // Only toggle if clicking the header area, not the task content
   if (event.target.closest('.task-list')) {
-    return;
+    return; // Don't toggle if clicking inside task list
   }
+  
   const taskList = document.getElementById("asNeededTasks");
   const arrow = document.getElementById("asNeededArrow");
   
-  if (taskList.style.display === "none") {
+  if (taskList.style.display === "none" || !taskList.style.display) {
     taskList.style.display = "block";
-    arrow.textContent = "⌄";
+    arrow.textContent = "▼";
     loadAsNeededTasks();
   } else {
     taskList.style.display = "none";
