Improve task completion tracking and caching
The changes refactor task completion logic to use a global counter, add better
cache busting, and ensure proper UI updates after task completion. This fixes
issues with stale data and improves the visibility of task progress.

--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -3797,6 +3797,7 @@ const task = {
     fairRotationTimeBased: (document.getElementById("fairRotationToggle").checked && document.getElementById("fairRotationTimeBasedToggle").checked) || undefined,
     parentApproval: document.getElementById("parentApprovalToggle").checked,
     onTimeCompletion: document.getElementById("onTimeCompletionToggle").checked,
+    isPrivate: document.getElementById("privateTask").checked,
     // alarms: alarms.length > 0 ? alarms : undefined,  // COMMENTED OUT
     timesPerDay: repeat === "Daily" ? timesPerDay : undefined,
     timesPerWeek: repeat === "Weekly" ? timesPerWeek : undefined,
